@@ -1,5 +1,6 @@
 2.5.2 (23.04.2019):
 
+* Allow translations for message types in multiple message window
 * Update to Hungarian translation (thanks to csola)
 
 
